--- a/web/styles.css
+++ b/web/styles.css
@@ -1,11 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 #output {
@@ -19,14 +20,302 @@ html, body {
   justify-content: center;
   font-size: large;
 }
-td{
+td {
   padding: 0 0;
 }
-#containerForCanvas{
+#containerForCanvas {
   text-align: center;
   height: 50vh;
-  margin-top:20px;
+  margin-top: 20px;
 }
-canvas{
+canvas {
   border: 1px black solid;
+}
+.svg-class {
+  margin-top: 2px;
+  border: 1px black solid;
+  padding: 2px;
+}
+
+#svg-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#Group_5 {
+  animation: drone 4s ease-in-out infinite;
+  transform-origin: center;
+}
+#Group_Wing_1 {
+  animation: wingsRotation1 0.4s ease-in-out infinite;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+#Group_Wing_2 {
+  animation: wingsRotation2 0.4s ease-in-out infinite;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+#Group_Wing_3 {
+  animation: wingsRotation3 0.4s ease-in-out infinite;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+#Group_Wing_4 {
+  animation: wingsRotation4 0.4s ease-in-out infinite;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+#head {
+  animation: headTwist 10s ease-in-out 5s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+#Group_7 {
+  animation: hand 4s ease-in-out 5s infinite alternate;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+@keyframes hand {
+  0%,
+  100%,
+  50% {
+    transform: rotatez(0deg);
+  }
+  10%,
+  30% {
+    transform: translateY(-20px) rotatez(-20deg);
+  }
+}
+@keyframes drone {
+  0% {
+    transform: translateY(0px) translatex(0px) rotateZ(0deg);
+  }
+  25% {
+    transform: translateY(25px) translatex(-200px) rotateZ(-10deg);
+  }
+  35% {
+    transform: translateY(50px) translatex(-200px) rotateZ(0deg);
+  }
+  50% {
+    transform: translateY(-10px) translatex(0px) rotateZ(10deg);
+  }
+  75% {
+    transform: translateY(0px) translatex(100px) rotateZ(10deg);
+  }
+  85% {
+    transform: translateY(30px) translatex(120px) rotateZ(-10deg);
+  }
+  100% {
+    transform: translateY(0px) translatex(0px) rotateZ(0deg);
+  }
+}
+@keyframes drone2 {
+  from {
+    transform: translatex(0px) rotateZ(0);
+  }
+  to {
+    transform: translatex(-200px) rotateZ(-30deg);
+  }
+}
+
+@keyframes wingsRotation1 {
+  0% {
+    transform: rotatey(0deg);
+  }
+  50% {
+    transform: rotatey(180deg);
+  }
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+@keyframes wingsRotation2 {
+  0% {
+    transform: rotatey(30deg);
+  }
+  50% {
+    transform: rotatey(210deg);
+  }
+
+  100% {
+    transform: rotateY(390deg);
+  }
+}
+@keyframes wingsRotation3 {
+  0% {
+    transform: rotatey(60deg);
+  }
+  50% {
+    transform: rotatey(240deg);
+  }
+
+  100% {
+    transform: rotateY(420deg);
+  }
+}
+@keyframes wingsRotation4 {
+  0% {
+    transform: rotatey(90deg);
+  }
+  50% {
+    transform: rotatey(270deg);
+  }
+
+  100% {
+    transform: rotateY(450deg);
+  }
+}
+@keyframes headTwist {
+  0%,
+  100%,
+  50% {
+    transform: rotatez(0deg);
+  }
+  10%,
+  30% {
+    transform: rotatez(20deg);
+  }
+}
+
+#mercury {
+  animation: orbitMercury 4s linear infinite;
+  transform-origin: center;
+}
+
+#venus {
+  animation: orbitVenus 6s linear infinite;
+  transform-origin: center;
+}
+
+#earth {
+  animation: orbitEarth 8s linear infinite;
+  transform-origin: center;
+}
+
+#mars {
+  animation: orbitMars 10s linear infinite;
+  transform-origin: center;
+}
+
+#jupiter {
+  animation: orbitJupiter 12s linear infinite;
+  transform-origin: center;
+}
+
+#saturn {
+  animation: orbitSaturn 15s linear infinite;
+  transform-origin: center;
+}
+
+#uranus {
+  animation: orbitUranus 18s linear infinite;
+  transform-origin: center;
+}
+
+#neptune {
+  animation: orbitNeptune 20s linear infinite;
+  transform-origin: center;
+}
+#moon {
+  animation: orbitMoon 8s linear infinite;
+  transform-origin: 50% 0%;
+  transform-box: fill-box;
+}
+
+@keyframes orbitMoon {
+  from {
+    transform: rotate(0deg) translateX(-140px);
+  }
+  to {
+    transform: rotate(360deg) translateX(-140px);
+  }
+}
+
+@keyframes orbitMercury {
+  from {
+    transform: rotate(0deg) translateX(-60px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-60px) rotate(0deg);
+  }
+}
+
+@keyframes orbitVenus {
+  from {
+    transform: rotate(0deg) translateX(-100px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-100px) rotate(0deg);
+  }
+}
+
+@keyframes orbitEarth {
+  from {
+    transform: rotate(0deg) translateX(-140px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-140px) rotate(0deg);
+  }
+}
+
+@keyframes orbitMars {
+  from {
+    transform: rotate(0deg) translateX(-180px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-180px) rotate(0deg);
+  }
+}
+
+@keyframes orbitJupiter {
+  from {
+    transform: rotate(0deg) translateX(-250px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-250px) rotate(0deg);
+  }
+}
+
+@keyframes orbitSaturn {
+  from {
+    transform: rotate(0deg) translateX(-320px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-320px) rotate(0deg);
+  }
+}
+
+@keyframes orbitUranus {
+  from {
+    transform: rotate(0deg) translateX(-390px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-390px) rotate(0deg);
+  }
+}
+
+@keyframes orbitNeptune {
+  from {
+    transform: rotate(0deg) translateX(-450px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(-450px) rotate(0deg);
+  }
+}
+
+#sun {
+  animation: rotateSun 24s linear infinite;
+  transform-origin: center;
+}
+
+@keyframes rotateSun {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
